fixed settings overflow bug

--- a/app/public/stylesheets/style.styl
+++ b/app/public/stylesheets/style.styl
@@ -321,6 +321,9 @@ tableHeaderItem()
             height: 150px
 
 #your-email
+    padding-top: 2px
+    padding-bottom: 2px
+
     input
         margin: 0
         margin-left: 4px
